--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ ext {
     junitVersion = "4.12"
     androidTestRunnerVersion = "1.0.2"
     espressoVersion = "3.0.2"
+    kotlinMockitoVersion = "1.5.0"
+    kluentVersion = "1.38"
+    retrofitVersion = "2.1.0"
+    rxJavaVersion = "2.0.2"
+    rxJavaAdapterVersion = "1.0.0"
+    rxAndroidVersion = "2.0.1"
 }
 
 task clean(type: Delete) {
