--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        def YELP_API_KEY = properties.getProperty('YELP_API_KEY')
+        buildConfigField "String", "YELP_API_KEY", YELP_API_KEY
     }
     buildTypes {
         release {
