--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext {
     rxJavaVersion = "2.0.2"
     rxJavaAdapterVersion = "1.0.0"
     rxAndroidVersion = "2.0.1"
+    lifecycleVersion = "1.1.1"
 }
 
 task clean(type: Delete) {
