--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     rxJavaAdapterVersion = "1.0.0"
     rxAndroidVersion = "2.0.1"
     lifecycleVersion = "1.1.1"
+    glideVersion = "4.7.1"
 }
 
 task clean(type: Delete) {
