--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "androidx.core:core-ktx:$androidCoreKtxVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
     // General dependencies
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
