--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ ext {
     lifecycleVersion = "2.1.0"
     glideVersion = "4.10.0"
     androidCoreKtxVersion = "1.1.0"
+    coroutinesVersion = "1.3.1"
 }
 
 task clean(type: Delete) {
