--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ ext {
     androidCoreKtxVersion = "1.1.0"
     coroutinesVersion = "1.3.1"
     viewModelKtxVersion = "2.1.0"
+    liveDataKtxVersion = "2.2.0-alpha05"
+    lifecycleKtxVersion = "2.2.0-alpha01"
 }
 
 task clean(type: Delete) {
