--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,10 @@ dependencies {
 
     // Test dependencies
     testImplementation "junit:junit:$junitVersion"
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:$kotlinMockitoVersion"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$kotlinMockitoVersion"
     testImplementation "org.amshove.kluent:kluent-android:$kluentVersion"
     testImplementation "androidx.arch.core:core-testing:$lifecycleVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
     androidTestImplementation "androidx.test:runner:$androidTestRunnerVersion"
     androidTestImplementation("androidx.test.espresso:espresso-core:$espressoVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
